fix acessibility and improve seo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Joke generator using the Joke API">
+    <meta name="author" content="Sarah Schneider">
+    <meta name="keywords" content="HTML, CSS, Javascript, API, Joke API, jokes">
 
     <title>Joke API</title>
 
@@ -12,7 +15,7 @@
 </head>
 <body>
     <main>
-    <h1>Do you wanna to hear something funny?</h1>
+    <h1>Do you wanna hear something funny?</h1>
 
     <section id="joke-area"></section>
     
